# pro-ref

./: .eslintrc.json  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  jest.config.js  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/: SPARSE_CHECKOUT_PATTERNS.md  copilot-instructions.md  toolsets.jsonc
.github/chatmodes/: implementation.chatmode.md  planning.chatmode.md  review.chatmode.md  security.chatmode.md
.github/instructions/: python.instructions.md  rust.instructions.md  security.instructions.md  typescript.instructions.md
.github/prompts/: generate-tests.prompt.md  implement-feature-tdd.prompt.md  pr-description.prompt.md  refactor-with-tests.prompt.md  security-review.prompt.md
.github/workflows/: ci.yml  windows_installer.yml
Extension/: background.js  config.js  manifest.json  popup (2).html  popup.html  popup.js
Extension/utils/: api-client.js  citation-processor.js  identifier-parser.js
docs/: README.md  SCHEMA_DIALECT.md
scripts/: build.js  capture.py  record_cassettes.py
src/api_gui/: __init__.py  __main__.py
src/clients/: uspto.py
src/core/: provider_loader.py
src/exporters/: endnote.py  endnote_field_map.uspto_pfw.json
src/gui/: app.py
src/providers/: provider.uspto.petition.search.json  provider.uspto.pfw.docs.json  provider.uspto.pfw.lookup.json
tests/: conftest.py  identifier-parser.test.js  setup.js  test_exporter.py  test_lookup_docs_bulk_vcr.py  test_petition_decisions_schema.py  test_pfw_search_vcr.py  test_schema_dialect.py  test_uspto_integration.py
(+29 files in other folders)
